2007-07-03  Christian Faulhammer  <opfer@gentoo.org>

	* elisp.eclass: Add RDEPEND line

2007-07-02  Christian Faulhammer  <opfer@gentoo.org>

	* elisp.eclass: Moved to Portage

	* elisp-common.eclass: Moved to Portage


2007-06-25  Ulrich Mueller  <ulm@gentoo.org>

	* elisp.eclass: Remove debugging code. Add some messages to die
	commands.

	* elisp-common.eclass (elisp-comp): Use pushd and popd.

2007-06-25  Christian Faulhammer  <opfer@gentoo.org>

	* elisp-common.eclass: Add einfo output for all functions

2007-06-24  Christian Faulhammer  <opfer@gentoo.org>

	* elisp.eclass: added DOCS variable for src_install

2007-06-23  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-comp): Check for Emacs return status.
	Test numerical condition and return instead of exit.
	Call Emacs with arguments in their canonical form.

2007-06-21  Christian Faulhammer  <opfer@gentoo.org>

	* elisp.eclass: added a comment when the site-start generation
	hints reveal nearly no output

	* elisp-common.eclass: added hint why has_version is not needed in
	connection with elisp-site-regen() and pkg_postrm

2007-06-20  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Generate output only if
	site-gentoo.el has changed.

2007-06-20  Christian Faulhammer  <opfer@gentoo.org>

	* elisp.eclass: add --silent option to elisp_pkg_postrm()

	* elisp-common.eclass: applied changes for a silent option for
	elisp-site-regen()

2007-06-12  Ulrich Mueller  <ulm@gentoo.org>

	* elisp.eclass (elisp_pkg_setup): Add more explanations to error
	message. Move down to proper place.

2007-06-12  Christian Faulhammer  <opfer@gentoo.org>

	* elisp.eclass (elisp_pkg_setup): remove an uncessary test

2007-06-11  Christian Faulhammer  <opfer@gentoo.org>

	* elisp.eclass: set free the ghosts of the NEED_EMACS depending
	scheme, for the new-style Emacs virtuals

2007-06-04  Ulrich Mueller  <ulm@gentoo.org>

	* elisp.eclass (elisp_pkg_setup): Use versionator.eclass for